<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.agustin.firebaseauthandroid_diaprogramador2017.LoginActivity">
android:background="@color/colorPrimary"
    >



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/actionbar_toolbar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_activity"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/padding_vertical_login"

                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>




                <Button
                    android:id="@+id/signIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_buttons_login"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_marginTop="@dimen/padding_vertical_login"
                    android:onClick="loginWithEmail"
                    />



                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_facebook_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_buttons_login"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding_vertical_buttons_login"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/login_google_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_buttons_login"
                    android:layout_marginTop="@dimen/padding_vertical_buttons_login" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_horizontal_activity"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">


                        <TextView
                            android:id="@+id/dontHaveAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dont_have_account"
                            android:textColor="@color/editTextColorBlack"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_donthave_account"
                            android:textAlignment="center"
                            android:layout_marginTop="@dimen/margin_vertical_login_dha_fp"
                            android:onClick="goCreateAccount"
                            />


                    </LinearLayout>



                </RelativeLayout>

            </LinearLayout>


        </ScrollView>



    </RelativeLayout>

</LinearLayout>



</android.support.design.widget.CoordinatorLayout>