<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agustin.firebaseauthandroid_diaprogramador2017.MainActivity">
    android:background="@color/colorPrimary"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/actionbar_toolbar"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_horizontal_activity">

                    <TextView
                        android:id="@+id/nameInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_name"
                        android:textColor="@color/editTextColorBlack"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_donthave_account"
                        android:textAlignment="textStart"
                        android:layout_marginTop="@dimen/margin_vertical_login_dha_fp"
                        />
                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="asd asd"
                        android:textColor="@color/editTextColorBlack"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_donthave_account"
                        android:textAlignment="textStart"
                        android:layout_marginTop="@dimen/margin_vertical_login_dha_fp"
                        />

                    <TextView
                        android:id="@+id/emailInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_email"
                        android:textColor="@color/editTextColorBlack"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_donthave_account"
                        android:textAlignment="textStart"
                        android:layout_marginTop="@dimen/margin_vertical_login_dha_fp"
                        />
                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="asd@gmail.com"
                        android:textColor="@color/editTextColorBlack"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_donthave_account"
                        android:textAlignment="textStart"
                        android:layout_marginTop="@dimen/margin_vertical_login_dha_fp"
                        />

                    <Button
                        android:id="@+id/signOut"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_buttons_login"
                        android:text="@string/text_button_signout"
                        android:theme="@style/RaisedButtonDark"
                        android:layout_marginTop="@dimen/padding_vertical_login"
                        android:onClick="logOut"
                        />

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>